# polymarket

./: .dockerignore  .env.example  .gcloudignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements-prod.txt  requirements.txt
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  constants.py  logging.py  security.py
scripts/: deploy_gcp.ps1  setup_gcp.ps1
tests/: test_api.py
