[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Automated Polymarket trading bot for Google Cloud Run"
readme = "README.md"
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "S", "ASYNC"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"app/api/*" = ["B008"]
"tests/*" = ["S101", "ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
